created README and fixing some style issues

--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@
         }
         
         header {
-            background-color: #54d1e4;
+            background-color: rgb(10, 57, 177);
             height: 140px;
             display: block;
             text-align: center;
