--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
             justify-content: center;
             flex-direction: column;
             margin: auto;
-            background-color: rgba(236, 124, 15, 0.69);
+            background-color: rgb(10, 57, 177);
         }
         
         .buttons {
@@ -13,7 +13,7 @@
             justify-content: center;
             height: 100px;
             width: 15%;
-            background: #54d1e4;
+            background: #166ad2;
             text-align: center;
             margin: 4px;
             padding: 13px;
@@ -22,8 +22,9 @@
             font-weight: bold;
             transition: 2.5s;
             font-size: -webkit-xxx-large;
-            color: yellow;
-            border: 4px solid white
+            color: #f2f723;
+            ;
+            border: 5px solid #f5f5f5;
         }
         
         header {
@@ -38,7 +39,7 @@
         
         #categoryName {
             font-size: 30px;
-            color: #f5f5f5;
+            color: #eaff54;
             text-align: center;
             padding-right: 10px;
             padding-left: 10px;
@@ -47,6 +48,7 @@
             padding-top: 5px;
             padding-bottomn: 10px;
             border: 5px solid #f5f5f5;
+            background: #166ad2;
         }
         
         h1 {
@@ -64,4 +66,5 @@
             letter-spacing: 5px;
             font-weight: bolder;
             text-decoration: underline;
+            color: whitesmoke;
         }
